初步完成通过网络获取新闻列表，逻辑都在NewsFragment里，而不是Servive。在NewsFragment里监听新闻分页NewsPagerAdapter的事件，然后访问网络，再调用新闻分页的方法设置数据。新闻数据由NewsManager管理。 NewsManager暂时比较乱。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,6 @@
         android:targetSdkVersion="21" >
     </uses-sdk>
 
-    <android:uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -35,6 +28,13 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home" >
         </activity>
+
+        <service
+            android:name=".NewsService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
