--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.mcxiaoke.volley:library:1.0.+'
     //compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
+    compile project(':pulltorefreshlibrary')
 }
