--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     //compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
     compile project(':pulltorefreshlibrary')
+    //compile 'cn.trinea.android.common:trinea-android-common:4.2.15@aar'
 }
