--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.mcxiaoke.volley:library:1.0.10'
     //compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
