电视播放基本有了雏形，还没有添加播放控件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:+'
     //compile 'cn.trinea.android.common:trinea-android-common:4.2.15@aar'
     compile project(':dhtv-andoird-library')
+    compile project(':ExoPlayerlibrary')
 }
