初步完成广播的代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:hardwareAccelerated="true"
            >
         </activity>
+
+        <service android:name=".service.AudioService">
+
+        </service>
     </application>
 
 </manifest>
