--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
+    //    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    //    compile 'com.ogaclejapan.smarttablayout:library:1.1.0@aar'
     compile 'com.mcxiaoke.volley:library:1.0.10'
     //compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
@@ -39,4 +41,6 @@ dependencies {
     //compile 'cn.trinea.android.common:trinea-android-common:4.2.15@aar'
     compile project(':dhtv-andoird-library')
     compile project(':ExoPlayerlibrary')
+        compile project(':SmartTabLayout-library')
+//    compile project(':PagerSlidingTabStrip-library')
 }
