--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,11 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
-    compile 'com.viewpagerindicator:library:2.4.1@aar'
+//    compile 'com.viewpagerindicator:library:2.4.1@aar'
     //    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     //    compile 'com.ogaclejapan.smarttablayout:library:1.1.0@aar'
     compile 'com.mcxiaoke.volley:library:1.0.10'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
     //compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
     //compile project(':pulltorefreshlibrary')
