--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 //    compile 'com.mcxiaoke.volley:library:1.0.10'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-//    compile 'com.facebook.fresco:fresco:0.4.0+'
+    compile 'com.facebook.fresco:fresco:0.4.0+'
+    compile "com.facebook.fresco:imagepipeline-okhttp:0.4.0+"
     //compile 'com.fasterxml.jackson.core:jackson-core:2.4.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
     //compile project(':pulltorefreshlibrary')
