--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,7 @@
         <activity
             android:name=".activity.TVListActivity"
             android:label="@string/title_activity_tvlist"
-
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize">
         </activity>
     </application>
